Support for building the project using Java 21